--- a/week1/index.html
+++ b/week1/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="wrapper">
         <div class="leftbox">
-            <img id="photo" src="C:\Users\---\Documents\GitHub\hyf-html-css\week1\photo\foto.jpg" alt="my photo">
+            <img id="photo" src="photo\foto.jpg" alt="my photo">
             <p class="subtitle">Profile</p>
             <p class="subcontent"> As a Mechanical Engineer, my main objective is to develop engineering solutions and
                 implement mechanical engineering procedures and processes to maintain
