--- a/week1/index.html
+++ b/week1/index.html
@@ -66,10 +66,10 @@
         <section class="hyf">
                 <h2>About Hack Your Future</h2>
                 <ul class="nopunt">
-                    <li> <a href="https://www.hackyourfuture.net/"><img class="logo" src="C:\Users\---\Documents\GitHub\hyf-html-css\week1\photo\hyf.png" alt="hyf logo"></a></li>
-                    <li> <a href="https://twitter.com/hackyourfutures"><img class="logo" src="C:\Users\---\Documents\GitHub\hyf-html-css\week1\photo\twit.png" alt="twitter logo"></a></li>
-                    <li> <a href="https://www.facebook.com/hackyourfuturenow/"><img class="logo" src="C:\Users\---\Documents\GitHub\hyf-html-css\week1\photo\face.png" alt="facebook logo"></a></li>
-                    <li> <a href="https://www.linkedin.com/company/hackyourfuture/"><img class="logo" src="C:\Users\---\Documents\GitHub\hyf-html-css\week1\photo\link.png" alt="linkedin logo"></a></li>
+                    <li> <a href="https://www.hackyourfuture.net/"><img class="logo" src="photo\hyf.png" alt="hyf logo"></a></li>
+                    <li> <a href="https://twitter.com/hackyourfutures"><img class="logo" src="photo\twit.png" alt="twitter logo"></a></li>
+                    <li> <a href="https://www.facebook.com/hackyourfuturenow/"><img class="logo" src="photo\face.png" alt="facebook logo"></a></li>
+                    <li> <a href="https://www.linkedin.com/company/hackyourfuture/"><img class="logo" src="photo\link.png" alt="linkedin logo"></a></li>
                 </ul>
             </section>
     </div>
